--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>給哈瑞的訊息</title>
+    <title>好康網站</title>
     <style>
         body {
             margin: 0;
@@ -25,8 +25,9 @@
 </head>
 <body>
 
-    <marquee><h1>白癡哈瑞</h1></marquee>
+    <marquee><h1>許嘉紘你滑鼠到底修好了沒 甚麼時候可以開打了 真的不行我把滑鼠寄給妳行不行</h1></marquee>
 
 </body>
 
 </html>
+
